# SparkTaxi

./: .gitignore  README.md  Results.txt  example_usage.py  idia.txt  pyproject.toml  requirements.txt  test_ml.py
.devcontainer/: devcontainer.json
src/: config.py  taxi_analysis.py  trip_duration_predictor.py
