[project]
name = "spark-taxi-nyc"
version = "0.1.0"
description = "NYC Taxi Data Analysis using Apache Spark"
authors = [
    {name = "Diego", email = "diego@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.5.0",
    "findspark>=2.0.1",
    "pandas>=2.1.4",
    "numpy>=1.24.3",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true